--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/property-access": "7.0.*",
         "symfony/property-info": "7.0.*",
         "symfony/runtime": "7.0.*",
+        "symfony/security-bundle": "7.0.*",
         "symfony/serializer": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
         "symfony/uid": "7.0.*",
@@ -105,6 +106,10 @@
         "rector/rector": "^0.19.2",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
-        "symfony/phpunit-bridge": "^7.0"
+        "symfony/debug-bundle": "7.0.*",
+        "symfony/maker-bundle": "^1.60",
+        "symfony/phpunit-bridge": "^7.0",
+        "symfony/stopwatch": "7.0.*",
+        "symfony/web-profiler-bundle": "7.0.*"
     }
 }
