--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -8,5 +8,6 @@ parameters:
         - tests/
     doctrine:
         objectManagerLoader: 'tests/object-manager.php'
+        reportDynamicQueryBuilders: true
     symfony:
         container_xml_path: 'var/cache/dev/App_KernelDevDebugContainer.xml'
