--- a/config/queries.yaml
+++ b/config/queries.yaml
@@ -3,3 +3,7 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        
+    App\Application\QueryHandler\GetFeedUpdatesQueryHandler:
+        tags:
+            - { name: tactician.handler, command: App\Application\Query\GetFeedUpdatesQuery, bus: query }
