--- a/frankenphp/Caddyfile
+++ b/frankenphp/Caddyfile
@@ -4,11 +4,6 @@
 	frankenphp {
 		{$FRANKENPHP_CONFIG}
 	}
-
-	# https://caddyserver.com/docs/caddyfile/directives#sorting-algorithm
-	order mercure after encode
-	order vulcain after reverse_proxy
-	order php_server before file_server
 }
 
 {$CADDY_EXTRA_CONFIG}
@@ -17,17 +12,14 @@
 	log {
 		# Redact the authorization query parameter that can be set by Mercure
 		format filter {
-			wrap console
-			fields {
-				uri query {
-					replace authorization REDACTED
-				}
+			request>uri query {
+				replace authorization REDACTED
 			}
 		}
 	}
 
 	root * /app/public
-	encode zstd gzip
+	encode zstd br gzip
 
 	mercure {
 		# Transport to use (default to Bolt)
